Backend/logs/exceptions-2025-04-18.log
2025-04-18 22:25:17 [[31merror[39m] MaxRetriesPerRequestError: Reached the max retries per request limit (which is 20). Refer to "maxRetriesPerRequest" option for details.
    at Socket.<anonymous> (C:\Users\User\Desktop\ekyc-hackathoon\Backend\node_modules\ioredis\built\redis\event_handler.js:182:37)
    at Object.onceWrapper (node:events:634:26)
    at Socket.emit (node:events:519:28)
    at TCP.<anonymous> (node:net:338:12)
2025-04-18 22:40:57 [[31merror[39m] C:\Users\User\Desktop\ekyc-hackathoon\Backend\src\kyc\kycController.js:27
      const job = await KycJob.create({
            ^

SyntaxError: Identifier 'job' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\User\Desktop\ekyc-hackathoon\Backend\src\kyc\kycRoutes.js:3:37)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\User\Desktop\ekyc-hackathoon\Backend\src\routes\index.js:3:19)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
